--- a/GDExtensionVS.vcxproj.filters
+++ b/GDExtensionVS.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="VSTestGDnative.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Enemy_Pathfinding.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="PlayerController.cpp">
@@ -33,6 +36,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="VSTestGDnative.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Enemy_Pathfinding.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
